--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -26,8 +26,9 @@ and open the template in the editor.
         </h:form>
         <h:panelGroup layout="block" style="margin-top: 20px;">
             <center>
-                <h:outputText value="this text only appears to users with admin role" rendered="#{security.hasRole('admin')}"/>
-                <h:outputText value="#{msg.welcome}" style="font-style: italic;font-size: 18px;font-weight: bolder"/>
+                <h:outputText value="#{msg.welcome}" style="font-style: italic;font-size: 18px;font-weight: bolder"/><br/>
+                <h:outputText value="this text must only appear to users with admin role" rendered="#{security.hasRole('administrator')}"/>
+
             </center>
         </h:panelGroup>
 
