--- a/src/main/webapp/group/listGroup.xhtml
+++ b/src/main/webapp/group/listGroup.xhtml
@@ -13,7 +13,7 @@ and open the template in the editor.
         xmlns:p="http://primefaces.org/ui"
         xmlns:c="http://java.sun.com/jsp/jstl/core">
        <center>
-           <p:panel header="#{msg.groups}"  style="margin: 15px;width: 750px;text-align: left">
+           <p:panel header="#{msg.groups}"  style="margin: 15px; height:450;width: 750px;text-align: left">
                <p:remoteCommand name="updateRowCount" update="@(span[id$=footer])"/>
                     <p:dataTable value="#{groupMBean.paginator.dataModel}" widgetVar="tableVar" id="table" var="row" emptyMessage="#{msg['group.notfound']}" 
                                  rows="5" paginatorPosition="bottom" 
