--- a/src/main/webapp/role/listRole.xhtml
+++ b/src/main/webapp/role/listRole.xhtml
@@ -14,7 +14,7 @@ and open the template in the editor.
         xmlns:c="http://java.sun.com/jsp/jstl/core">
     
        <center>
-           <p:panel header="#{msg.roles}"  style="margin: 15px;width: 600px;text-align: left">
+           <p:panel header="#{msg.roles}"  style="margin: 15px;height:450px;width: 750px;text-align: left">
                <p:remoteCommand name="updateRowCount" update="mainForm:table:footer"/>
                     <p:dataTable value="#{roleMBean.paginator.dataModel}" widgetVar="tableVar" id="table" var="row" emptyMessage="#{msg['role.notfound']}" 
                                  rows="5" paginatorPosition="bottom" 
