initial functional testes(logon is green)

--- a/src/test/resources/pages/test-logon.xhtml
+++ b/src/test/resources/pages/test-logon.xhtml
@@ -9,16 +9,14 @@
         xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 
-    <h:panelGroup rendered="#{not loggedIn}">
-        <p:remoteCommand rendered="#{not loggedIn}" autoRun="true"  action="#{testService.clearDatabase}" process="@none" update="@none" partialSubmit="true"/>
-    </h:panelGroup>
     <p:dialog id="logonDialog" visible="#{not loggedIn}" header="#{msg['logon.header']}" modal="true"
               closable="false">
         <h:form id="loginForm">
+            <p:remoteCommand name="init" rendered="#{not loggedIn}" autoRun="true" immediate="true" process="@this" update="@none" partialSubmit="true" actionListener="#{testService.initDatabase}"/>
             <p:focus for="loginForm"/>
             <p:messages id="loginMessages"/>
             <h:panelGrid columns="2">
-                <p:outputLabel for="inptUser" value="#{msg['logon.username']}"/>
+                <p:outputLabel for="inptUser" value="#{msg['logon.username']} TEST"/>
                 <p:inputText id="inptUser" value="#{security.user.name}" style="cursor: pointer"
                              required="true" requiredMessage="#{msg['logon.usernameRequired']}"/>
                 <p:outputLabel for="inptPass" value="#{msg['logon.password']}"/>
@@ -26,7 +24,7 @@
                             required="true" requiredMessage="#{msg['logon.passwordRequired']}"/>
             </h:panelGrid>
             <center>
-                <p:commandButton value="Login" action="#{security.doLogon}"
+                <p:commandButton id="btLogon" value="Login" onclick="init()" action="#{security.doLogon}"
                                  update=":logonDialog loginMessages" ajax="false" styleClass="ui-priority-primary">
                     <f:param name="includeViewParams" value="true"/>
                 </p:commandButton>
