--- a/src/test/resources/pages/test-logon.xhtml
+++ b/src/test/resources/pages/test-logon.xhtml
@@ -16,7 +16,7 @@
             <p:focus for="loginForm"/>
             <p:messages id="loginMessages"/>
             <h:panelGrid columns="2">
-                <p:outputLabel for="inptUser" value="#{msg['logon.username']} TEST"/>
+                <p:outputLabel for="inptUser" value="#{msg['logon.username']}"/>
                 <p:inputText id="inptUser" value="#{security.user.name}" style="cursor: pointer"
                              required="true" requiredMessage="#{msg['logon.usernameRequired']}"/>
                 <p:outputLabel for="inptPass" value="#{msg['logon.password']}"/>
