--- a/src/main/webapp/group/listGroup.xhtml
+++ b/src/main/webapp/group/listGroup.xhtml
@@ -27,8 +27,8 @@ and open the template in the editor.
                         <p:column sortBy="#{row.name}" filterBy="#{row.name}" headerText="#{msg.group}">
                             <h:outputText value="#{row.name}"/>
                         </p:column>
-                         <p:column sortBy="#{row.roles}"  filterOptions="#{comboMBean.roleList}" filterBy="#{row.roles}" headerText="#{msg.roles}">
-                            <p:dataList value="#{row.roles}" var="r" rendered="#{not empty row.roles}">
+                         <p:column sortBy="#{row.rolesAsList}"  filterOptions="#{comboMBean.roleList}" filterBy="#{row.roles}" headerText="#{msg.roles}">
+                            <p:dataList value="#{row.rolesAsList}" var="r" rendered="#{not empty row.roles}">
                                 <p:column>
                                     #{r.name}
                                 </p:column>
