--- a/src/main/webapp/role/listRole.xhtml
+++ b/src/main/webapp/role/listRole.xhtml
@@ -25,8 +25,8 @@ and open the template in the editor.
                                  
                         <p:ajax event="filter" oncomplete="updateRowCount()"/>
 
-                        <p:column sortBy="#{row.name}" filterBy="#{row.name}"  headerText="#{msg.role}">
-                            <h:outputText value="#{row.name}"/>
+                        <p:column sortBy="#{row.name}" filterBy="#{row.name}"  headerText="#{msg.role}" id="colName">
+                            <h:outputText id="name" value="#{row.name}"/>
                         </p:column>
                         <p:column sortBy="#{row.createDate}" headerText="#{msg.createDate}">
                             <h:outputText value="#{row.createDate}">
