--- a/src/main/webapp/role/roleHome.xhtml
+++ b/src/main/webapp/role/roleHome.xhtml
@@ -15,6 +15,10 @@ and open the template in the editor.
     template="../templates/main.xhtml"
     >
     <ui:define name="content">
+        <f:metadata>
+            <f:viewParam name="resetBean" value="#{roleMBean.resetBean}"/>
+        </f:metadata>
+        <f:event type="preRenderView" listener="#{roleMBean.resetBean}"/>
         <f:event type="preRenderView" listener="#{stateController.clearState}"/>
         <p:outputPanel rendered="#{empty roleMBean.beanState or roleMBean.findState}">
             <ui:include src="listRole.xhtml"/>
