--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -27,8 +27,7 @@ and open the template in the editor.
         <h:panelGroup layout="block" style="margin-top: 20px;">
             <center>
                 <h:outputText value="#{msg.welcome}" style="font-style: italic;font-size: 18px;font-weight: bolder"/><br/>
-                <h:outputText value="this text must only appear to users with admin role" rendered="#{security.hasRole('administrator')}"/>
-
+                <h:outputText value="BUILD TIME:#{timeNow}"/>
             </center>
         </h:panelGroup>
 
