--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -27,7 +27,7 @@ and open the template in the editor.
         <h:panelGroup layout="block" style="margin-top: 20px;">
             <center>
                 <h:outputText value="#{msg.welcome}" style="font-style: italic;font-size: 18px;font-weight: bolder"/><br/>
-                <h:outputText value="Version:#{configMap.version}"/>
+                <h:outputText value="Version:#{configMap.appVersion}"/>
             </center>
         </h:panelGroup>
 
